# dania_ept_tvoiy_mat

./: main.py  pyproject.toml  test_ws_client.py
src/: routes.py
src/core/: config.py
src/database/: __init__.py  models.py
src/grpc_token_checker/: auth_service.proto  auth_service_pb2.py  auth_service_pb2_grpc.py  token_validator_depends.py
src/modules/ai_module/: routes.py  service.py
src/modules/chats/: routes.py  schemas.py  services.py
src/modules/messages/: routes.py  schemas.py  services.py
src/shared/: depends.py  enums.py  funcs.py  schemas.py
