[project]
name = "hackaton-backend-chats-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.0",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.12",
    "greenlet>=3.2.2",
    "grpcio>=1.71.0",
    "grpcio-tools>=1.71.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.9.1",
    "sqlalchemy>=2.0.41",
]
